# GabexEngine

./: .gitignore  CMakeLists.txt  README.md  build.bat  imgui.ini
Debug/: DefaultName.json  DefaultScene.json  imgui.ini
Release/: imgui.ini
include/imguifiledialog/: ImGuiFileDialog.h
src/: FirstApp.cpp  FirstApp.hpp  GPipeLine.hpp  GWApp.cpp  GWApp.hpp  GWBuffer.cpp  GWBuffer.hpp  GWDebug.cpp  GWDebug.hpp  GWDevice.cpp  GWDevice.hpp  GWDvice.cpp  GWGameObject.hpp  GWModel.cpp  GWModel.hpp  GWPipeLine.cpp  GWPipeLine.hpp  GWRenderer.cpp  GWRenderer.hpp  GWRendererToolkit.hpp  GWSwapChain.cpp  GWSwapChain.hpp  GWindow.cpp  GWindow.hpp  JSONHandler.cpp  JSONHandler.hpp  main.cpp
src/EC/: GWCamera.cpp  GWCamera.hpp  GWCubemapHandler.cpp  GWCubemapHandler.hpp  GWDescriptors.cpp  GWDescriptors.hpp  GWFrameInfo.hpp  GWGameObject.cpp  GWGameObject.hpp  GWImageLoader.cpp  GWImageLoader.hpp  GWMaterialHandler.cpp  GWMaterialHandler.hpp  GWModel.cpp  GWModel.hpp  GWModelLoader.cpp  GWModelLoader.hpp  GWOffscreenRenderer.cpp  GWOffscreenRenderer.hpp  GWRenderer.cpp  GWRenderer.hpp  GWRendererToolkit.cpp  GWRendererToolkit.hpp  GWScene.cpp  GWScene.hpp  GWShadowRenderer.cpp  GWShadowRenderer.hpp  GWTexture.cpp  GWTexture.hpp  GWTextureHandler.cpp  GWTextureHandler.hpp  keyboard_movement_controller.cpp  keyboard_movement_controller.hpp
src/ECSSystems/: GWCamera.cpp  GWCamera.hpp  GWDescriptors.cpp  GWDescriptors.hpp  GWFrameInfo.hpp  GWGameObject.hpp  GWModel.cpp  GWModel.hpp  GWModelLoader.cpp  GWModelLoader.hpp  GWRenderer.cpp  GWRenderer.hpp  PointLightSystem.hpp  RenderSystem.cpp  RenderSystem.hpp  keyboard_movement_controller.hpp
src/models/: DefaultName.json
src/shaders/: compiler.bat  imgui.ini  point_light.frag  point_light.frag.spv  point_light.vert  point_light.vert.spv  shader.frag  shader.frag.spv  shader.vert  shader.vert.spv  shadow.vert  shadow.vert.spv  skybox.frag  skybox.frag.spv  skybox.vert  skybox.vert.spv
src/systems/: InterfaceSystem.cpp  InterfaceSystem.hpp  LightSystem.cpp  LightSystem.hpp  MasterRenderSystem.cpp  MasterRenderSystem.hpp  PointLightSystem.cpp  PointLightSystem.hpp  RenderSystem.cpp  RenderSystem.hpp  ShadowSystem.cpp  ShadowSystem.hpp  (+2 more)
(+13 files in other folders)
